Review changes
Doc updates
Removed dodgy isEqual() in Tuple
Exposed Desktop ctor
Fixed component mapping for images shorter than 4 channels